syntax = "proto3";

package ypb;
option go_package = "/;ypb";


service ExecYakScriptService {
  // Exec
  rpc Exec(ExecRequest) returns (stream ExecResult);
  rpc QueryExecHistory(ExecHistoryRequest) returns (ExecHistoryRecordResponse);
  rpc RemoveExecHistory(Empty) returns (Empty);
  rpc LoadNucleiTemplates(Empty) returns (Empty);
  rpc AutoUpdateYakModule(Empty) returns (stream ExecResult);
  rpc ExecYakScript(ExecRequest) returns (stream ExecResult);
  rpc ExecBatchYakScript(ExecBatchYakScriptRequest) returns (stream ExecBatchYakScriptResult);
  rpc GetExecBatchYakScriptUnfinishedTask(Empty) returns (GetExecBatchYakScriptUnfinishedTaskResponse);
  rpc GetExecBatchYakScriptUnfinishedTaskByUid(GetExecBatchYakScriptUnfinishedTaskByUidRequest) returns (ExecBatchYakScriptRequest);
  rpc PopExecBatchYakScriptUnfinishedTaskByUid(GetExecBatchYakScriptUnfinishedTaskByUidRequest) returns (ExecBatchYakScriptRequest);
  rpc RecoverExecBatchYakScriptUnfinishedTask(RecoverExecBatchYakScriptUnfinishedTaskRequest) returns (stream ExecBatchYakScriptResult);
}


message ExecRequest {
  repeated ExecParamItem Params = 1;
  string Script = 2;
  string ScriptId = 3;
  int64 YakScriptId = 5;

  // 这个是为了满足 Runner 的情况，属于特殊情况
  string RunnerParamRaw = 6;
}


message ExecParamItem {
  string Key = 1;
  string Value = 2;
}

message ExecResult {
  string Hash = 1;
  string OutputJson = 2;
  bytes Raw = 3;
  bool IsMessage = 4;
  bytes Message = 5;

  // 如果是一个保存过的 ExecResult 他应该有数据库记录 ID
  int64 Id = 6;

  string RuntimeID = 7;
  float Progress = 8;
}

// Yak Invoker
message ExecHistoryRequest {
  Paging Pagination = 1;
  int64 YakScriptId = 3;
  string YakScriptName = 4;
}

message ExecHistoryRecordResponse {
  repeated ExecHistoryRecord Data = 1;
  Paging Pagination = 2;
  int64 Total = 3;
}

message ExecBatchYakScriptRequest {
  // 目标会被自动拆分
  string Target = 1;
  string TargetFile = 11;

  // 额外参数可以被添加
  repeated ExecParamItem ExtraParams = 7;

  // 筛选与限制
  string Keyword = 2;
  repeated string ExcludedYakScript = 22;
  bool DisableNucleiWorkflow = 23;
  int64 Limit = 3;

  // 默认总用时
  int64 TotalTimeoutSeconds = 4;

  // 模块类型，默认为 nuclei
  string Type = 5;

  // 并发（进程）
  int64 Concurrent = 6;

  // 精确使用脚本名称
  // 要注意，这个 Scripts 和 PluginFilter 是冲突的
  repeated string ScriptNames = 8;

  // Tags with exclude / include
  QueryYakScriptRequest PluginFilter = 12;
  bool EnablePluginFilter = 13;

  // 设置一个代理
  string Proxy = 14;

  // 每个进程的任务数量
  int64 ProgressTaskCount = 15;

  // 基础进度 - 这个默认是 0.1 一般别用，只在 Recover 的时候可能才会有用处
  double BaseProgress = 16;
  // 这个很关键，不然会报错
  bool FromRecover = 17;

  string YakScriptOnlineGroup = 18;
  string TaskName = 19;
}


message ExecBatchYakScriptResult {
  string Id = 1;
  string Status = 2;
  bool Ok = 4;
  string Reason = 5;
  bool Exploitable = 6;

  // 脚本的详细信息
  YakScript PoC = 7;
  ExecResult Result = 8;

  // 如果是整体进度信息，则在这儿展示
  // 处理这几个消息的时候，其他都不应该生效
  bool ProgressMessage = 9;
  double ProgressPercent = 10;
  int64 ProgressTotal = 11;
  int64 ProgressCount = 12;

  // 正在执行中的进程数
  int64 ProgressRunning = 17;

  // 正在执行中的扫描任务数量
  int64 ScanTaskExecutingCount = 18;

  // 任务相关内容
  string Target = 13;
  repeated ExecParamItem ExtraParam = 14;
  string TaskId = 15;

  // 当前时间
  int64 Timestamp = 16;
}


message GetExecBatchYakScriptUnfinishedTaskResponse {
  repeated ExecBatchYakScriptUnfinishedTask Tasks = 1;
}

message GetExecBatchYakScriptUnfinishedTaskByUidRequest {
  string Uid = 1;
}

message RecoverExecBatchYakScriptUnfinishedTaskRequest {
  string Uid = 1;
}